# rp5-whisper

./: .gitignore  CMakeLists.txt  README.md  build_environment.sh  config.json  start_whisper_server.sh
cmake/: CMakeLists.txt
cmake/examples/: CMakeLists.txt
src/: CMakeLists.txt  README.md  command.cpp  command.h  curl_request.cpp  curl_request.h  debug.cpp  debug.h  main.cpp  voice_max_loudness.cpp  voice_max_loudness.h  voice_record.cpp  voice_record.h  whisper.cpp  whisper.h  whisper_fuzzy.cpp  whisper_fuzzy.h  whisper_stream.cpp  whisper_stream.h
